--- a/1JS/Week3-ArraysAndFunctions/index.html
+++ b/1JS/Week3-ArraysAndFunctions/index.html
@@ -17,7 +17,7 @@
         <!-- <script src="ArraysAndFunctions.js"></script> -->
         <!-- <script src="ArrowFunctionsAndCallbacks.js"></script> -->
         <!-- <script src="ObjectOriented.js"></script> -->
-        <script src="Functions.js"></script>
+        <script src="Inter-Array-Methods.js"></script>
 
 
     </body>
