--- a/1JS/Week4-ECMASAndInterJS/index.html
+++ b/1JS/Week4-ECMASAndInterJS/index.html
@@ -17,7 +17,7 @@
         <!-- <script src="ArraysAndFunctions.js"></script> -->
         <!-- <script src="ArrowFunctionsAndCallbacks.js"></script> -->
         <!-- <script src="ObjectOriented.js"></script> -->
-        <script src="ES6ArrowFunctions.js"></script>
+        <script src="LiveClass.js"></script>
 
 
     </body>
