--- a/1JS/Week5-ObjectOrtientedProgramming/index.html
+++ b/1JS/Week5-ObjectOrtientedProgramming/index.html
@@ -11,12 +11,13 @@
         
         <!-- Uncomment the file you are working on -->
 
-        <!-- <script src="1VariablesAndOperations.js"></script> -->
-        <!-- <script src="1VariableDataTypes.js"></script> -->
-        <script src="2ConditionsAndLoops.js"></script>
-        <!-- <script src="3ArraysAndFunctions.js"></script> -->
-        <!-- <script src="4ArrowFunctionsAndCallbacks.js"></script> -->
-        <!-- <script src="5ObjectOriented.js"></script> -->
+        <!-- <script src="VariablesAndOperations.js"></script> -->
+        <!-- <script src="VariableDataTypes.js"></script> -->
+        <!-- <script src="ConditionsAndLoops.js"></script> -->
+        <!-- <script src="ArraysAndFunctions.js"></script> -->
+        <!-- <script src="ArrowFunctionsAndCallbacks.js"></script> -->
+        <!-- <script src="ObjectOriented.js"></script> -->
+        <script src="OfficeHours.js"></script>
 
 
     </body>
