--- a/2FET/Week7-HTML/Week7CA/about.html
+++ b/2FET/Week7-HTML/Week7CA/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 7 Coding Assignment</title>
+    <title>Week 6 Coding Assignment</title>
 </head>
 <body>
     <h1>About</h1>
@@ -14,14 +14,83 @@
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </div>
-
-    <img  height="500px" src="" alt="image text">
-    <h2>About our cat food</h2>
-    <p>Our cat food is the best in the world. Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom.</p>
-
-    <h2>Why choose our cat food?</h2>
-    <p>It is very yummy!</p>
+    <h2>Jair Alcon - Software Developer</h2>
+    <p>My goal in taking the Promineo Tech Front-End Software Developer Bootcamp is to seek out new career opportunities that will enable me to grow in the Software
+        Development field. I'm seeking full-remote employment at a company whose values and mission statement resonate with mine.
+    </p>    
+    <h4>In the order presented, I have learned up to HTML. I'm currently on Week 7 of 18.</h2>
     
     
+    <table>
+        <tr>
+            <th>Week</th>
+            <th>Concepts</th>
+            <th>Assignment/Notes</th>
+            <th>Technology</th>
+        </tr>
+        <tr>
+            <td>1:</td>
+            <td>CLI, Source Control, and Variables</td>
+            <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week1-Variables">Notes</a></td>
+            <td><img  height="50px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+        </tr>
+        <tr>
+            <td>2:</td>
+            <td>Conditions and Loops</td>
+            <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week2-ConditionsAndLoops">Notes</a></td>
+            <td><img  height="50px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+        </tr>
+        <tr>
+            <td>3:</td>
+            <td>Arrays and Functions</td>
+            <td><a href="https://github.com/jairalcon/Promineo/blob/main/1JS/Week3-ArraysAndFunctions/Week3CA.js">Assignment</a></td>
+            <td><img  height="50px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+        </tr>
+        <tr>
+            <td>4:</td>
+            <td>ECMAScript 6 and Intermediate JavaScript</td>
+            <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week4-ECMASAndInterJS">Notes</a></td>
+            <td><img  height="50px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+        </tr>
+        <tr>
+            <td>5:</td>
+            <td>Object Oriented Programming</td>
+            <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week5-ObjectOrtientedProgramming/Week5CodingAssignment">Assignment</a></td>
+            <td><img  height="50px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+        </tr>
+        <tr>
+            <td>6:</td>
+            <td>DevTools, Debugging, and Unit Tests</td>
+            <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week6-DevToolsDebuggingAndUnitTesting/Week6CodingAssignment">Assignment</a></td>
+            <td><img  height="50px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+        </tr>
+        <tr>
+            <td>7:</td>
+            <td>HyperText Markup Language (HTML)</td>
+            <td><a href="https://github.com/jairalcon/Promineo/tree/main/2FET/Week7-HTML/Week7CA">Assignment</a></td>
+            <td><img  height="50px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
+        </tr>
+    </table>
+
+
+    <br>
+
+
+
+    <!-- Git Banner -->
+    <!-- <img  height="150px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"> -->
+    <!-- JS Banner -->
+    <!-- <img  height="150px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"> -->
+    <!-- HTML Banner -->
+    <!-- <img  height="150px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"> -->
+    <!-- CSS Banner -->
+    <!-- <img  height="150px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner"> -->
+    <!-- Bootstrap Banner -->
+    <!-- <img  height="150px" src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" alt="Bootstrap banner"> -->
+    <!-- JQuery Banner -->
+    <!-- <img  height="150px" src="https://www.tutorialrepublic.com/lib/images/jquery-illustration.png" alt="JQuery banner"> -->
+    <!-- REACT Banner -->
+    <!-- <img  height="150px" src="https://user-images.githubusercontent.com/41876764/94856480-e7b8b200-03e4-11eb-949d-c3a447b43df2.jpeg" alt="REACT banner"> -->
+
 </body>
 </html>
