updating elements for CSS

--- a/2FET/Week8-CSS/Week8CA/about.html
+++ b/2FET/Week8-CSS/Week8CA/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 7 Coding Assignment</title>
+    <title>Week 8 Coding Assignment</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -14,9 +15,11 @@
     <!-- adding navbar for future -->
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <div class="navlinks">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </div>
         </ul>
 
         <form>
@@ -31,9 +34,9 @@
 
         <p>My goal in taking the <strong>Promineo Tech Front-End Software Developer Bootcamp</strong> is to seek out new career opportunities that will enable me to grow in the Software Development field. I'm seeking full-remote employment at a company whose values and mission statement resonate with me.</p>    
         <!-- I've added 2 picture already so I thought adding a gif would be neat -->
-        <img height="250" src="./images/programmer.gif" alt="programmer sitting at computer">
+        <img class="gif" height="250" src="./images/programmer.gif" alt="programmer sitting at computer">
         
-        <h4>In the order presented, I have learned up to HTML. I'm currently on Week 7 of 18.</h2>     
+        <h4>In the order presented, I have learned up to HTML. I'm currently on Week 8 of 18.</h2>     
         
         <table>
             <tr>
@@ -93,6 +96,15 @@
                 <td>HyperText Markup Language (HTML)</td>
                 <td><a href="https://github.com/jairalcon/Promineo/tree/main/2FET/Week7-HTML/Week7CA">Assignment</a></td>
                 <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
+                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+
+            </tr>
+            <tr>
+                <td>8:</td>
+                <td>Cascading Style Sheets (CSS)</td>
+                <td><a href="#">Assignment</a></td>
+                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
+                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner"></td>
                 <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
             </tr>
