--- a/2FET/Week8-CSS/Week8CA/contact.html
+++ b/2FET/Week8-CSS/Week8CA/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 7 Coding Assignment</title>
+    <title>Week 8 Coding Assignment</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -14,9 +15,11 @@
     <!-- adding navbar for future -->
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <div class="navlinks">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </div>
         </ul>
 
         <form>
@@ -47,9 +50,7 @@
             </tr>
         </table>
 
-        <!-- <a href="/buy/puppies/now">
-            <img src="puppy.jpg" alt="A happy puppy.">
-        </a> -->
+        <!-- <a href="/buy/puppies/now"><img src="puppy.jpg" alt="A happy puppy."></a> -->
 
         <form>
             <h3>Let's get in touch</h3>
