--- a/2FET/Week8-CSS/Week8CA/index.html
+++ b/2FET/Week8-CSS/Week8CA/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 7 Coding Assignment</title>
+    <title>Week 8 Coding Assignment</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -14,9 +15,11 @@
     <!-- adding navbar for future -->
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <div class="navlinks">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </div>
         </ul>
 
         <form>
@@ -27,30 +30,30 @@
 
     <main>
 
-        <h2>Hello, there. I'm Jair Alcon.</h1>
+        <h2>Hello, there. I'm Jair Alcon.</h1><br>
 
         <img height="250px" src="./images/Jair Alcon.JPEG" alt="image of laptop with coding on screen"> <br>
 
-        <h3>Welcome to my portfolio site.</h3>
+        <h3>Welcome to my portfolio site.</h3><br>
         
-        <br>
-
-        <!-- Git Banner -->
-        <img  height="50px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner">
-        <!-- JS Banner -->
-        <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner">
-        <!-- Mocha Chai Banner -->
-        <img  height="50px" src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" alt="Mocha Chai banner">
-        <!-- HTML Banner -->
-        <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner">
-        <!-- CSS Banner -->
-        <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner">
-        <!-- Bootstrap Banner -->
-        <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" alt="Bootstrap banner">
-        <!-- JQuery Banner -->
-        <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/jquery-illustration.png" alt="JQuery banner">
-        <!-- REACT Banner -->
-        <img  height="50px" src="https://user-images.githubusercontent.com/41876764/94856480-e7b8b200-03e4-11eb-949d-c3a447b43df2.jpeg" alt="REACT banner">
+        <div class="images">
+            <!-- Git Banner -->
+            <img  height="50px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner">
+            <!-- JS Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner">
+            <!-- Mocha Chai Banner -->
+            <img  height="50px" src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" alt="Mocha Chai banner">
+            <!-- HTML Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner">
+            <!-- CSS Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner">
+            <!-- Bootstrap Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" alt="Bootstrap banner">
+            <!-- JQuery Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/jquery-illustration.png" alt="JQuery banner">
+            <!-- REACT Banner -->
+            <img  height="50px" src="https://user-images.githubusercontent.com/41876764/94856480-e7b8b200-03e4-11eb-949d-c3a447b43df2.jpeg" alt="REACT banner">
+        </div>
 
     </main>
     <br>
