--- a/2FET/Week8-CSS/LiveClass/live-class.html
+++ b/2FET/Week8-CSS/LiveClass/live-class.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Week 8</title>
-    <link rel="stylesheet" href="week8.css"/>
+    <link rel="stylesheet" href="live-class.css"/>
 </head>
 <body>
     <nav class="top-navbar">
