still in progress

--- a/2FET/Week8-CSS/Week8CA/about.html
+++ b/2FET/Week8-CSS/Week8CA/about.html
@@ -9,17 +9,13 @@
 </head>
 <body>
 
-    <header>
-        <h1>About</h1>
-    </header>
     <!-- adding navbar for future -->
-    <nav>
-        <ul>
-            <div class="navlinks">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </div>
+    <nav class="top-navbar">
+        <div class="title">About</div>
+        <ul>            
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>            
         </ul>
 
         <form>
@@ -38,74 +34,74 @@
         
         <h4>In the order presented, I have learned up to HTML. I'm currently on Week 8 of 18.</h2>     
         
-        <table>
+        <table class="about-table">
             <tr>
                 <th>Week</th>
                 <th>Concepts</th>
                 <th>Assignment/Notes GitHub</th>
-                <th>Technology</th>
+                <th class="table-image">Technology</th>
             </tr>
             <tr>
                 <td>1:</td>
                 <td>CLI, Source Control, and Variables</td>
                 <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week1-Variables">Notes</a></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
             </tr>
             <tr>
                 <td>2:</td>
                 <td>Conditions and Loops</td>
                 <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week2-ConditionsAndLoops">Notes</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
             </tr>
             <tr>
                 <td>3:</td>
                 <td>Arrays and Functions</td>
                 <td><a href="https://github.com/jairalcon/Promineo/blob/main/1JS/Week3-ArraysAndFunctions/Week3CA.js">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
             </tr>
             <tr>
                 <td>4:</td>
                 <td>ECMAScript 6 and Intermediate JavaScript</td>
                 <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week4-ECMASAndInterJS">Notes</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
             </tr>
             <tr>
                 <td>5:</td>
                 <td>Object Oriented Programming</td>
                 <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week5-ObjectOrtientedProgramming/Week5CodingAssignment">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
             </tr>
             <tr>
                 <td>6:</td>
                 <td>DevTools, Debugging, and Unit Tests</td>
                 <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week6-DevToolsDebuggingAndUnitTesting/Week6CodingAssignment">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-                <td><img  height="75px" src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" alt="Mocha Chai banner"></td>
+                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                <td class="table-image"><img  height="75px" src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" alt="Mocha Chai banner"></td>
             </tr>
             <tr>
                 <td>7:</td>
                 <td>HyperText Markup Language (HTML)</td>
                 <td><a href="https://github.com/jairalcon/Promineo/tree/main/2FET/Week7-HTML/Week7CA">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
+                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
             </tr>
             <tr>
                 <td>8:</td>
                 <td>Cascading Style Sheets (CSS)</td>
                 <td><a href="#">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
+                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner"></td>
+                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
             </tr>
         </table>
