--- a/2FET/Week8-CSS/Week8CA/index.html
+++ b/2FET/Week8-CSS/Week8CA/index.html
@@ -9,17 +9,13 @@
 </head>
 <body>
 
-    <header>
-        <h1>Homepage</h1>
-    </header>
     <!-- adding navbar for future -->
-    <nav>
-        <ul>
-            <div class="navlinks">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </div>
+    <nav class="top-navbar">
+        <div class="title">Portfolio Home</div>
+        <ul>            
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>            
         </ul>
 
         <form>
