almost there with CSS

--- a/2FET/Week8-CSS/Week8CA/about.html
+++ b/2FET/Week8-CSS/Week8CA/about.html
@@ -30,7 +30,7 @@
 
         <p>My goal in taking the <strong>Promineo Tech Front-End Software Developer Bootcamp</strong> is to seek out new career opportunities that will enable me to grow in the Software Development field. I'm seeking full-remote employment at a company whose values and mission statement resonate with me.</p>    
         <!-- I've added 2 picture already so I thought adding a gif would be neat -->
-        <img class="gif" height="250" src="./images/programmer.gif" alt="programmer sitting at computer">
+        <img id="programmer-gif" src="./images/programmer.gif" alt="programmer sitting at computer">
         
         <h4>In the order presented, I have learned up to HTML. I'm currently on Week 8 of 18.</h2>     
         
