need to add comments

--- a/2FET/Week8-CSS/Week8CA/about.html
+++ b/2FET/Week8-CSS/Week8CA/about.html
@@ -14,11 +14,11 @@
         <div class="title">About</div>
         <ul>            
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li class="active-link"><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>            
         </ul>
 
-        <form>
+        <form id="nav-search">
             <input type="search" name="q" placeholder="Search query">
             <input type="submit" value="Go!">
         </form>
