--- a/2FET/Week8-CSS/Week8CA/index.html
+++ b/2FET/Week8-CSS/Week8CA/index.html
@@ -11,14 +11,14 @@
 
     <!-- adding navbar for future -->
     <nav class="top-navbar">
-        <div class="title">Portfolio Home</div>
+        <div class="title">Home</div>
         <ul>            
-            <li><a href="index.html">Home</a></li>
+            <li class="active-link"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>            
         </ul>
 
-        <form>
+        <form id="nav-search">
             <input type="search" name="q" placeholder="Search query">
             <input type="submit" value="Go!">
         </form>
@@ -28,7 +28,7 @@
 
         <h2>Hello, there. I'm Jair Alcon.</h1><br>
 
-        <img height="250px" src="./images/Jair Alcon.JPEG" alt="image of laptop with coding on screen"> <br>
+        <img id="headshot" src="./images/Jair Alcon.JPEG" alt="image of laptop with coding on screen"> <br>
 
         <h3>Welcome to my portfolio site.</h3><br>
         
