--- a/2FET/Week9-Bootstrap/1Web-Servers/index.html
+++ b/2FET/Week9-Bootstrap/1Web-Servers/index.html
@@ -17,7 +17,7 @@
 
 
     <img height="500px" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-photos-1593441022.jpg" alt="cat on its back">
-    <h2>Welcome to out site</h2>
+    <h2>Welcome to our site</h2>
     <p>Thank you for checking out our products.</p>
 
     
