--- a/2FET/Week9-Bootstrap/1Web-Servers/about.html
+++ b/2FET/Week9-Bootstrap/1Web-Servers/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 9: Bootstrap</title>
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
     <h1>About</h1>
@@ -17,6 +18,8 @@
 
     <img  height="500px" src="https://i.natgeofe.com/n/f0dccaca-174b-48a5-b944-9bcddf913645/01-cat-questions-nationalgeographic_1228126.jpg" alt="cat lying down on its tummy">
     <h2>About our cat food</h2>
+    <p>Our cat food is the best in the world. Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom.</p>
+    <br>
     <p>Our cat food is the best in the world. Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom Lorem ipsom.</p>
 
     <h2>Why choose our cat food?</h2>
