--- a/2FET/Week9-Bootstrap/Week9CA/about.html
+++ b/2FET/Week9-Bootstrap/Week9CA/about.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 7 Coding Assignment</title>
+    <title>Week 9 Coding Assignment</title>
+    <!-- Using Bootstrap 4.4.1 -->
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
 
@@ -103,6 +105,9 @@
         <p>©Copyright 2022 by Jair Alcon. All rights reversed.</p>
     </footer>
     <br>
+
+    <script src="./node_modules/jquery/dist/jquery.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
 
