working on table CSS and commenting

--- a/2FET/Week8-CSS/Week8CA/about.html
+++ b/2FET/Week8-CSS/Week8CA/about.html
@@ -14,6 +14,7 @@
         <div class="title">About</div>
         <ul>            
             <li><a href="index.html">Home</a></li>
+            <!-- active-link to style when link is active -->
             <li class="active-link"><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>            
         </ul>
