--- a/2FET/Week8-CSS/Week8CA/index.html
+++ b/2FET/Week8-CSS/Week8CA/index.html
@@ -12,7 +12,8 @@
     <!-- adding navbar for future -->
     <nav class="top-navbar">
         <div class="title">Home</div>
-        <ul>            
+        <ul>
+                <!-- active-link to style when link is active -->
             <li class="active-link"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>            
