--- a/2FET/Week8-CSS/Week8CA/contact.html
+++ b/2FET/Week8-CSS/Week8CA/contact.html
@@ -15,6 +15,7 @@
         <ul>            
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
+            <!-- active-link to style when link is active -->
             <li class="active-link"><a href="contact.html">Contact</a></li>            
         </ul>
 
