ready to submit assignment

--- a/2FET/Week8-CSS/Week8CA/about.html
+++ b/2FET/Week8-CSS/Week8CA/about.html
@@ -40,7 +40,7 @@
                 <th>Week</th>
                 <th>Concepts</th>
                 <th>Assignment/Notes GitHub</th>
-                <th class="table-image">Technology</th>
+                <th>Technology</th>
             </tr>
             <tr>
                 <td>1:</td>
