--- a/2FET/Week8-CSS/Week8CA/contact.html
+++ b/2FET/Week8-CSS/Week8CA/contact.html
@@ -64,7 +64,7 @@
                 <input type="text" id="email-input" name="email" placeholder="E-Mail">
                 <br>
                 <br>
-                <textarea class="contact-text" name="comment" id="comment-input" cols="72" rows="5"></textarea>
+                <textarea class="contact-text-box" name="comment" id="comment-input" cols="72" rows="5"></textarea>
                 <br>
                 <input type="submit" value="Submit">
                 <input type="reset" value="Reset">
