--- a/2FET/Week9-Bootstrap/Week9CA/index.html
+++ b/2FET/Week9-Bootstrap/Week9CA/index.html
@@ -5,116 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 9 Coding Assignment</title>
-    <!-- Using Bootstrap 4.4.1 -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+    <!-- Using Bootstrap 5.2 -->
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
-<body>
+<body class="container">
 
-    <!-- adding navbar for future -->
-    <nav class="top-navbar">
-        <div class="title">About</div>
-        <ul>            
-            <li><a href="index.html">Home</a></li>
-            <li class="active-link"><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>            
-        </ul>
-
-        <form id="nav-search">
-            <input type="search" name="q" placeholder="Search query">
-            <input type="submit" value="Go!">
-        </form>
+    <nav class="navbar navbar-expand-lg bg-secondary" style="background-color: #e3f2fd">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Jair Alcon</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
     </nav>
-
+    <!-- todo -->
     <main>
 
-        <h2>Jair Alcon: Front-End Software Developer</h2>
+        <h2>Hello, there. I'm Jair Alcon.</h1><br>
 
-        <p>My goal in taking the <strong>Promineo Tech Front-End Software Developer Bootcamp</strong> is to seek out new career opportunities that will enable me to grow in the Software Development field. I'm seeking full-remote employment at a company whose values and mission statement resonate with me.</p>    
-        <!-- I've added 2 picture already so I thought adding a gif would be neat -->
-        <img id="programmer-gif" src="./images/programmer.gif" alt="programmer sitting at computer">
-        
-        <h4>In the order presented, I have learned up to HTML. I'm currently on Week 8 of 18.</h2>     
-        
-        <table class="about-table">
-            <tr>
-                <th>Week</th>
-                <th>Concepts</th>
-                <th>Assignment/Notes GitHub</th>
-                <th class="table-image">Technology</th>
-            </tr>
-            <tr>
-                <td>1:</td>
-                <td>CLI, Source Control, and Variables</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week1-Variables">Notes</a></td>
-                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-            </tr>
-            <tr>
-                <td>2:</td>
-                <td>Conditions and Loops</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week2-ConditionsAndLoops">Notes</a></td>
-                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+        <img id="headshot" src="./images/Jair Alcon.JPEG" alt="image of laptop with coding on screen"> <br>
 
-            </tr>
-            <tr>
-                <td>3:</td>
-                <td>Arrays and Functions</td>
-                <td><a href="https://github.com/jairalcon/Promineo/blob/main/1JS/Week3-ArraysAndFunctions/Week3CA.js">Assignment</a></td>
-                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+        <h3>Welcome to my portfolio site.</h3><br>
+        <!-- todo -->
+        <div class="images">
+            <!-- Git Banner -->
+            <img  height="50px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner">
+            <!-- JS Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner">
+            <!-- Mocha Chai Banner -->
+            <img  height="50px" src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" alt="Mocha Chai banner">
+            <!-- HTML Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner">
+            <!-- CSS Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner">
+            <!-- Bootstrap Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" alt="Bootstrap banner">
+            <!-- JQuery Banner -->
+            <img  height="50px" src="https://www.tutorialrepublic.com/lib/images/jquery-illustration.png" alt="JQuery banner">
+            <!-- REACT Banner -->
+            <img  height="50px" src="https://user-images.githubusercontent.com/41876764/94856480-e7b8b200-03e4-11eb-949d-c3a447b43df2.jpeg" alt="REACT banner">
+        </div>
 
-            </tr>
-            <tr>
-                <td>4:</td>
-                <td>ECMAScript 6 and Intermediate JavaScript</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week4-ECMASAndInterJS">Notes</a></td>
-                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-
-            </tr>
-            <tr>
-                <td>5:</td>
-                <td>Object Oriented Programming</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week5-ObjectOrtientedProgramming/Week5CodingAssignment">Assignment</a></td>
-                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-
-            </tr>
-            <tr>
-                <td>6:</td>
-                <td>DevTools, Debugging, and Unit Tests</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week6-DevToolsDebuggingAndUnitTesting/Week6CodingAssignment">Assignment</a></td>
-                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-                <td class="table-image"><img  height="75px" src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" alt="Mocha Chai banner"></td>
-            </tr>
-            <tr>
-                <td>7:</td>
-                <td>HyperText Markup Language (HTML)</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/2FET/Week7-HTML/Week7CA">Assignment</a></td>
-                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
-                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-
-            </tr>
-            <tr>
-                <td>8:</td>
-                <td>Cascading Style Sheets (CSS)</td>
-                <td><a href="#">Assignment</a></td>
-                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
-                <td class="table-image"><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner"></td>
-                <td class="table-image"><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-
-            </tr>
-        </table>
     </main>
-
+    <br>
     <footer>
         <p>©Copyright 2022 by Jair Alcon. All rights reversed.</p>
     </footer>
-    <br>
 
-    <script src="./node_modules/jquery/dist/jquery.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
 
