--- a/2FET/Week9-Bootstrap/5-Bootstrap-Navbar.html
+++ b/2FET/Week9-Bootstrap/5-Bootstrap-Navbar.html
@@ -12,7 +12,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <!-- creating responsive and mobile -->
         <a class="navbar-brand" href="#">CodeProjex</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
